--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,5 +37,5 @@ jobs:
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add values.yaml
-          git commit -m "Update values.yaml"
+          git commit -m "Update new values.yaml"
           git push
